# wokwi-projects

./: README.md  blinky.test.yaml
.github/workflows/: ci.yml
esp32-no_std-blinky/: Cargo.toml  main.rs
esp32-no_std-template/: Cargo.toml  main.rs
esp32-std-template/: main.rs
esp32c3-no_std-blinky/: Cargo.toml  main.rs
esp32c3-no_std-template/: Cargo.toml
esp32c3_rust-no_std-template/: Cargo.toml
esp32s2-no_std-blinky/: Cargo.toml  main.rs
esp32s2-no_std-template/: Cargo.toml  main.rs
esp32s3-no_std-blinky/: Cargo.toml  main.rs
esp32s3-no_std-template/: Cargo.toml  main.rs
esp32s3-std-blinky/: main.rs
examples/: blinky.test.yaml  blinky_nostd.yaml  blinky_std.yaml
examples/esp32-nostd-blinky_341952826535051858/: Cargo.toml  diagram.json  main.rs  wokwi.toml
examples/esp32-std-blinky_333363577816613460/: Cargo.toml  diagram.json  wokwi.toml
examples/esp32c3-nostd-blinky_341956526159692371/: Cargo.toml  diagram.json  main.rs  wokwi.toml
examples/esp32c3-std-blinky_332188235906155092/: Cargo.toml  diagram.json  main.rs  wokwi.toml
examples/esp32s2-nostd-blinky_341955297469792851/: Cargo.toml  diagram.json  main.rs  wokwi.toml
examples/esp32s2-std-blinky_333363982163247699/: Cargo.toml  diagram.json  main.rs  wokwi.toml
examples/esp32s3-nostd-blinky_349568945405035090/: Cargo.toml  diagram.json  main.rs  wokwi.toml
examples/esp32s3-std-blinky_361808947755817985/: Cargo.toml  diagram.json  main.rs
templates/esp32-std_338154815612781140/: wokwi.toml
templates/esp32s3-std_345144250522927698/: wokwi.toml
templates/rust-esp32/: Cargo.toml  diagram.json
templates/rust-esp32-c3/: Cargo.toml  diagram.json  main.rs
templates/rust-esp32-rust-board/: diagram.json
templates/rust-esp32-s2/: Cargo.toml  diagram.json
templates/rust-esp32-s3/: Cargo.toml  diagram.json  main.rs
templates/rust-nostd-esp32/: Cargo.toml  diagram.json  main.rs  wokwi.toml
templates/rust-nostd-esp32-c3/: diagram.json  main.rs
templates/rust-nostd-esp32-rust-board/: Cargo.toml  diagram.json
templates/rust-nostd-esp32-s2/: diagram.json  main.rs
templates/rust-nostd-esp32-s3/: Cargo.toml  diagram.json
