[package]
name = "rust_project_esp32s2"
version = "0.1.0"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32s2-hal", version = "0.8.0" }
esp-backtrace = { version = "0.6.0", features = [
    "esp32s2",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.5.0", features = ["esp32s2"] }
esp-alloc = { version = "0.2.0", features = ["oom-handler"] }
