[package]
name = "rust_project_esp32s3"
version = "0.1.0"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32s3-hal = "0.3.0"
esp-alloc = { version = "0.1.0", features = ["oom-handler"] }
esp-backtrace = { version = "0.3.0", features = [
    "esp32s3",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.3.1", features = ["esp32s3"] }
xtensa-lx-rt = { version = "0.13.0", features = ["esp32s3"], optional = true }

[features]
default = ["rt"]
rt = ["xtensa-lx-rt"]
