[package]
name = "rust-project-esp32s2"
version = "0.1.0"
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = { version = "0.40.1"}
esp-idf-svc = { version = "0.45.0"}

embedded-hal = { version = "=1.0.0-alpha.9"}
embedded-svc = { version= "0.24.0"}

[build-dependencies]
embuild = "0.31.1"
