[package]
name = "rust_project_esp32"
version = "0.1.0"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32-hal", version = "0.11.0" }
esp-backtrace = { version = "0.7.0", features = [
    "esp32",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.5.0", features = ["esp32"] }
xtensa-lx-rt = { version = "0.15.0", features = ["esp32"], optional = true }

[features]
default = ["rt"]
rt = ["xtensa-lx-rt"]
